Mon Nov 12 11:22:39 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Added GNOME 2.0 and some other.

Wed Nov  7 16:34:41 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* NEWS: Added relasedate to version 0.8.

Wed Nov  7 10:54:39 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* Branched into GNOMEMUD_0_8_BRANCH

Wed Nov  7 09:42:31 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/init.c (window_menu_help_manual_activate_cb): Changed to
	just call "ghelp:gnome-mud", which seems to do the trick.

Tue Nov  6 18:30:01 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* po/{ca,es}.po: Updated.

Tue Nov  6 16:46:59 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* po/sv.po: Updated.

Tue Nov  6 16:42:17 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* doc/C/Makefile.am: Removed a circular dependency.
	* src/init.c: (window_menu_help_manual_activate_cb): Added.
	Also added help entry to menu.

Mon Nov  5 16:49:34 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* src/init.c: Robin's patch for the Manual link in the help
	menu.

	* po/{ca,es,fr}.po: updated About entry.

	* NEWS: added note about the GNOME limitation described below.

	* AUTHORS: added Martin Quinson, updated myself.

Mon Nov  5 16:43:04 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* doc/C/topic.dat: added, file with the title of the manual
	for the Help menu. Beware, it won't work if GNOME-Mud is
	installed in /usr/local. Known GNOME bug, will be fixed in
	GNOME 2.
	* doc/C/Makefile.am: added topic.dat to EXTRA_DIST.

Mon Nov  5 13:20:16 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* po/fr.po: French update by Martin Quinson.
	* src/init.c: added Martin to "About".

Mon Oct 29 14:17:32 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* po/{ca,es}.po: minor fixes.

Mon Oct 29 03:05:35 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* Makefile.am: added gnome-mud.desktop to EXTRA_DIST.

	* doc/sgmldocs.make: woops, too much snipage. Fixed the