@@ -437,6 +437,51 @@ static void do_disconnect (GtkWidget *widget, gpointer data)
   }
 }
 
+static void save_log_file_ok_cb(GtkWidget *widget, GtkFileSelection *file_selector)
+{
+	FILE *fp;
+	CONNECTION_DATA *cd;
+	gchar *textdata;
+	
+	gint   number	= gtk_notebook_get_current_page(GTK_NOTEBOOK(main_notebook));
+	gchar *filename = gtk_file_selection_get_filename(GTK_FILE_SELECTION(file_selector));
+
+	cd = connections[number];
+
+	if ((fp = fopen(filename, "w")) == NULL)
+	{
+		popup_window(_("Could not open file for writing..."));
+		return;
+	}
+
+	textdata = gtk_editable_get_chars(GTK_EDITABLE(cd->window), 0, -1);
+	fputs(textdata, fp);	
+	g_free(textdata);
+	
+	fclose(fp);
+}
+
+static void save_log_cb (GtkWidget *widget, gpointer data)
+{
+	gint  size = strlen(g_get_home_dir()) + 10;
+	gchar *homedir;
+	
+	GtkWidget *file_selector = gtk_file_selection_new(_("Please select a log file..."));
+
+	homedir = g_malloc0(sizeof(gchar *) * size);
+	g_snprintf(homedir, size, "%s/", g_get_home_dir());
+	
+	gtk_file_selection_set_filename(GTK_FILE_SELECTION(file_selector), homedir);
+	g_free(homedir);
+
+	gtk_signal_connect(GTK_OBJECT(GTK_FILE_SELECTION(file_selector)->ok_button), "clicked", GTK_SIGNAL_FUNC(save_log_file_ok_cb), file_selector);
+	gtk_signal_connect_object(GTK_OBJECT(GTK_FILE_SELECTION(file_selector)->ok_button), "clicked",
+							  GTK_SIGNAL_FUNC(gtk_widget_destroy), (gpointer) file_selector);
+	gtk_signal_connect_object(GTK_OBJECT(GTK_FILE_SELECTION(file_selector)->cancel_button), "clicked",
+							  GTK_SIGNAL_FUNC(gtk_widget_destroy), (gpointer) file_selector);
+	gtk_widget_show(file_selector);
+}
+
 static void window_menu_help_manual_activate_cb(GtkMenuItem *menuitem)
 {
 	gnome_help_goto(NULL, "ghelp:gnome-mud");
@@ -460,6 +505,7 @@ static GnomeUIInfo file_menu[] = {
   GNOMEUIINFO_ITEM_STOCK(N_("Connect..."), NULL, connect_window, GNOME_STOCK_MENU_OPEN),
   GNOMEUIINFO_ITEM_STOCK(N_("Disconnect"), NULL, do_disconnect, GNOME_STOCK_MENU_CLOSE),
   GNOMEUIINFO_SEPARATOR,
+  GNOMEUIINFO_ITEM_STOCK(N_("Save log..."), NULL, save_log_cb, GNOME_STOCK_MENU_SAVE),
   GNOMEUIINFO_ITEM_STOCK(N_("Close Window"), NULL, do_close, GNOME_STOCK_MENU_BLANK),
   GNOMEUIINFO_SEPARATOR,
   GNOMEUIINFO_MENU_EXIT_ITEM(destroy, NULL),
